syntax = "proto2";
package com.ruixi.tpulse.convention;
option java_package="com.tenth.nft.protobuf";
option java_outer_classname = "NftSearch";

message EXTERNAL_NFT_CATEGORY_REBUILD_IC{
  required int64 version = 1;
}

message EXTERNAL_NFT_COLLECTION_REBUILD_IC{
  required int64 collectionId = 1;
}

message EXTERNAL_NFT_ITEM_REBUILD_IC{
  required int64 collectionId = 1;
}

message NFT_CATEGORY_REBUILD_IC{
  required int64 version = 1;
}

message NFT_COLLECTION_REBUILD_IC{
  required int64 collectionId = 1;
}

message NFT_ASSETS_REBUILD_IC{
  required int64 assetsId = 1;
}

message NFT_BLOCKCHAIN_REBUILD_IC{
  required int64 version = 1;
}
message NFT_CURRENCY_REBUILD_IC{
  required string blockchain = 1;
}

message AssetsDTO{
  required int64 collectionId = 1;
  required int64 creator = 2;
  required string blockchain = 3;
}

message ASSETS_IC{
  required int64 assetsId = 2;
}
message ASSETS_IS{
  required AssetsDTO assets = 1;
}

message NFT_CURRENCY_RATE_REBUILD_IC{
  required string token = 1;
}
message NFT_CURRENCY_RATE_REBUILD_IS{

}

